[package]
name = "aarch64"
version = "0.1.0"
authors = ["Phosphorus15 <steepout@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
zip = "0.5.6"
regex = "1"
rayon = "1.1"
pest = "2.1.1"
pest_derive = "2.0"